
2019-01-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, mlio.c, screenio.c: fixed compiler warnings

2019-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix background=foreground from terminal
	* screenio.c (cob_screen_init, cob_screen_attr): explicit define and use
	  color_pair 1 as "black on black" 
	* screenio.c (cob_screen_attr): fix long standing bug in use of
	  color_set (takes color_pair_number, not a COLOR_PAIR)
	* screenio.c (cob_screen_attr): extracted (cob_to_curses_color,
	  cob_get_color_pair, cob_activate_color_pair)
	* screenio.c: fix compiler warnings and correctly use chtype
	* common.c (print_info): extensive output of curses library including
	  size for chtype, wide yes/no and forced UTF-8 for PDCurses
	* common.c: use SLASH_CHAR where possible

2019-01-20  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (check_valid_env_tmpdir): unset invalid TMPDIRs to prevent
	  warning/error messages from used tools
	* common.c (print_info): added version output for libxml2 + cJSON
	* mlio.c (cob_json_generate): fix warning about use of unset var
	* mlio.c: fix warnings and issues about defines not set / set to zero

2019-01-05  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c: added JSON GENERATE.
	* common.h, common.c: replaced COB_FERROR_* #define's with
	  cob_fatal_error enum.

2019-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* xml.c: renamed file to mlio.c and cob_..._xmlio to cob_..._mlio.

2019-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: check for definition of non-portable EDEADLK before using it,
	  possibly using EDEADLOCK instead

2018-12-31  Simon Sobisch <simonsobisch@gnu.org>

	* system.def, common.h: new entry EXTFH / cob_sys_extfh
	* fileio.c (cob_sys_extfh): new function used as COBOL wrapper for
	  EXTFH entry to prevent warnings about FCD3 structure, linking issues
	  and providing additional checks
	* fileio.c (EXTFH): return file code 9/161 for different errors